Fixing crash condition in SkyMap::refract().  The array index could sometimes go out of bounds, leading to a segfault.

Will port to trunk and 4.0 branch

BUG: 133505
CCMAIL: kstars-devel@kde.org


svn path=/branches/KDE/3.5/kdeedu/kstars/; revision=766927